--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^0.24.0",
     "lodash": "^4.17.4",
     "materialize-css": "^0.100.2",
     "moment": "^2.18.1",
